@@ -34,7 +34,7 @@
  */
 
 #include "includes.h"
-RCSID("$OpenBSD: log.c,v 1.20 2002/01/17 04:27:37 stevesk Exp $");
+RCSID("$OpenBSD: log.c,v 1.21 2002/02/04 12:15:25 markus Exp $");
 
 #include "log.h"
 #include "xmalloc.h"
@@ -68,7 +68,7 @@ static struct {
 	{ "LOCAL5",	SYSLOG_FACILITY_LOCAL5 },
 	{ "LOCAL6",	SYSLOG_FACILITY_LOCAL6 },
 	{ "LOCAL7",	SYSLOG_FACILITY_LOCAL7 },
-	{ NULL, (SyslogFacility)0 }
+	{ NULL,		SYSLOG_FACILITY_NOT_SET }
 };
 
 static struct {
@@ -85,7 +85,7 @@ static struct {
 	{ "DEBUG1",	SYSLOG_LEVEL_DEBUG1 },
 	{ "DEBUG2",	SYSLOG_LEVEL_DEBUG2 },
 	{ "DEBUG3",	SYSLOG_LEVEL_DEBUG3 },
-	{ NULL, (LogLevel)0 }
+	{ NULL,		SYSLOG_LEVEL_NOT_SET }
 };
 
 static void	 do_log(LogLevel level, const char *fmt, va_list args);
@@ -98,7 +98,7 @@ log_facility_number(char *name)
 		for (i = 0; log_facilities[i].name; i++)
 			if (strcasecmp(log_facilities[i].name, name) == 0)
 				return log_facilities[i].val;
-	return (SyslogFacility) - 1;
+	return SYSLOG_FACILITY_NOT_SET;
 }
 
 LogLevel
@@ -109,7 +109,7 @@ log_level_number(char *name)
 		for (i = 0; log_levels[i].name; i++)
 			if (strcasecmp(log_levels[i].name, name) == 0)
 				return log_levels[i].val;
-	return (LogLevel) - 1;
+	return SYSLOG_LEVEL_NOT_SET;
 }
 /* Fatal messages.  This function never returns. */
 
